--- a/index.html
+++ b/index.html
@@ -62,11 +62,16 @@
     </p>
 
 
+    <p>
+        حفظ التغييرات مع رسالة توضيحية <br>
+        <code>git commit -m "add text"</code>
+    </p>
 
 
-
-
-
+    <p>
+        عرض سجل جميع عمليات الحفظ (commits) <br>
+        <code>git log</code>
+    </p>
 
 
 
