--- a/index.html
+++ b/index.html
@@ -10,71 +10,79 @@
 
 <body>
     <p>
-        أولاً: تهيئة المشروع كمستودع جديد <br>
+        أولاً: تهيئة المشروع كمستودع جديد  
         <code>git init</code>
     </p>
 
     <p>
-        ثانياً: عرض حالة الملفات (المتابعة وغير المتابعة) <br>
+        ثانياً: عرض حالة الملفات (المتابعة وغير المتابعة)  
         <code>git status</code>
     </p>
 
     <p>
-        ثالثا: إضافة ملف محدد (مثلاً index.html) للمتابعة <br>
+        ثالثا: إضافة ملف محدد (مثلاً index.html) للمتابعة  
         <code>git add index.html</code>
     </p>
 
     <p>
-        رابعاً: إيقاف متابعة ملف معيّن بدون حذفه من الجهاز <br>
+        رابعاً: إيقاف متابعة ملف معيّن بدون حذفه من الجهاز  
         <code>git rm --cached style.css</code>
     </p>
 
     <p>
-        خامساً: إضافة جميع الملفات الموجودة في المشروع <br>
+        خامساً: إضافة جميع الملفات الموجودة في المشروع  
         <code>git add .</code>
     </p>
 
     <p>
-        سادساً: حفظ التغييرات مع رسالة توضيحية <br>
+        سادساً: حفظ التغييرات مع رسالة توضيحية  
         <code>git commit -m "أول حفظ للتغييرات"</code>
     </p>
 
 
     <p>
-        إعداد اسم المستخدم العالمي في Git <br>
+        إعداد اسم المستخدم العالمي في Git  
         <code>git config --global user.name "SULAIMAN"</code>
     </p>
 
     <p>
-        إعداد البريد الإلكتروني العالمي في Git <br>
+        إعداد البريد الإلكتروني العالمي في Git  
         <code>git config --global user.email "sulaiman.lutfi.sho@gmail.com"</code>
     </p>
 
 
     <p>
-        عرض اسم المستخدم الحالي في إعدادات Git <br>
+        عرض اسم المستخدم الحالي في إعدادات Git  
         <code>git config user.name</code>
     </p>
 
     <p>
-        عرض البريد الإلكتروني الحالي في إعدادات Git <br>
+        عرض البريد الإلكتروني الحالي في إعدادات Git  
         <code>git config user.email</code>
     </p>
 
 
     <p>
-        حفظ التغييرات مع رسالة توضيحية <br>
+        حفظ التغييرات مع رسالة توضيحية  
         <code>git commit -m "add text"</code>
     </p>
 
 
     <p>
-        عرض سجل جميع عمليات الحفظ (commits) <br>
+        عرض سجل جميع عمليات الحفظ (commits)  
         <code>git log</code>
     </p>
 
 
+    <p>
+        عرض سجل الحفظ (commits) بشكل مختصر وسطر واحد لكل عملية  
+        <code>git log --oneline</code>
+    </p>
 
+
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
