--- a/index.html
+++ b/index.html
@@ -10,77 +10,81 @@
 
 <body>
     <p>
-        أولاً: تهيئة المشروع كمستودع جديد  
+        أولاً: تهيئة المشروع كمستودع جديد
         <code>git init</code>
     </p>
 
     <p>
-        ثانياً: عرض حالة الملفات (المتابعة وغير المتابعة)  
+        ثانياً: عرض حالة الملفات (المتابعة وغير المتابعة)
         <code>git status</code>
     </p>
 
     <p>
-        ثالثا: إضافة ملف محدد (مثلاً index.html) للمتابعة  
+        ثالثا: إضافة ملف محدد (مثلاً index.html) للمتابعة
         <code>git add index.html</code>
     </p>
 
     <p>
-        رابعاً: إيقاف متابعة ملف معيّن بدون حذفه من الجهاز  
+        رابعاً: إيقاف متابعة ملف معيّن بدون حذفه من الجهاز
         <code>git rm --cached style.css</code>
     </p>
 
     <p>
-        خامساً: إضافة جميع الملفات الموجودة في المشروع  
+        خامساً: إضافة جميع الملفات الموجودة في المشروع
         <code>git add .</code>
     </p>
 
     <p>
-        سادساً: حفظ التغييرات مع رسالة توضيحية  
+        سادساً: حفظ التغييرات مع رسالة توضيحية
         <code>git commit -m "أول حفظ للتغييرات"</code>
     </p>
 
 
     <p>
-        إعداد اسم المستخدم العالمي في Git  
+        إعداد اسم المستخدم العالمي في Git
         <code>git config --global user.name "SULAIMAN"</code>
     </p>
 
     <p>
-        إعداد البريد الإلكتروني العالمي في Git  
+        إعداد البريد الإلكتروني العالمي في Git
         <code>git config --global user.email "sulaiman.lutfi.sho@gmail.com"</code>
     </p>
 
 
     <p>
-        عرض اسم المستخدم الحالي في إعدادات Git  
+        عرض اسم المستخدم الحالي في إعدادات Git
         <code>git config user.name</code>
     </p>
 
     <p>
-        عرض البريد الإلكتروني الحالي في إعدادات Git  
+        عرض البريد الإلكتروني الحالي في إعدادات Git
         <code>git config user.email</code>
     </p>
 
 
     <p>
-        حفظ التغييرات مع رسالة توضيحية  
+        حفظ التغييرات مع رسالة توضيحية
         <code>git commit -m "add text"</code>
     </p>
 
 
     <p>
-        عرض سجل جميع عمليات الحفظ (commits)  
+        عرض سجل جميع عمليات الحفظ (commits)
         <code>git log</code>
     </p>
 
 
     <p>
-        عرض سجل الحفظ (commits) بشكل مختصر وسطر واحد لكل عملية  
+        عرض سجل الحفظ (commits) بشكل مختصر وسطر واحد لكل عملية
         <code>git log --oneline</code>
     </p>
 
+    <p>
+        الانتقال بين الفروع أو استرجاع الملفات من نسخة سابقة <br>
+        <code>git checkout</code>
+    </p>
 
-
+    <p></p>
 
     <script src="script.js"></script>
 </body>
