--- a/index.html
+++ b/index.html
@@ -84,7 +84,15 @@
         <code>git checkout</code>
     </p>
 
-    <p></p>
+    <p>
+        عرض جميع الفروع في المشروع (المحلية والبعيدة) <br>
+        <code>git branch -a</code>
+    </p>
+
+    <p>
+        إنشاء فرع جديد باسم "student" <br>
+        <code>git branch student</code>
+    </p>
 
     <script src="script.js"></script>
 </body>
