--- a/index.html
+++ b/index.html
@@ -93,6 +93,29 @@
         إنشاء فرع جديد باسم "student" <br>
         <code>git branch student</code>
     </p>
+    <p>
+        إعادة تسمية الفرع الحالي إلى اسم جديد <br>
+        <code>git branch -m sulaiman-sho</code>
+    </p>
+
+
+    <p>
+        حذف فرع باسم
+        "student"
+        إذا كان مدمج بالكامل <br>
+        <code>git branch -d student</code>
+    </p>
+
+    <p>
+        حذف فرع باسم
+        "student"
+        بالقوة حتى لو غير مدمج
+        ونركز على ان حرف ال
+        D كبير
+        وليس صغير <br>
+        <code>git branch -D student</code>
+    </p>
+
 
     <script src="script.js"></script>
 </body>
