--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
         <code>git branch -D student</code>
     </p>
 
+    <p>
+        إنشاء فرع جديد باسم "new_branch_test" والانتقال إليه مباشرة <br>
+        <code>git checkout -b new_branch_test</code>
+    </p>
 
     <script src="script.js"></script>
 </body>
